exports[`filterReducer setLocation 1`] = `
Object {
  "location": "Pennsylvania",
  "text": "",
}
`;

exports[`filterReducer setText 1`] = `
Object {
  "location": "New York",
  "text": "Penn",
}
`;

exports[`filterReducer undefined 1`] = `
Object {
  "location": "New York",
  "text": "",
}
`;
